parser/gramaticaLivre.txt
iniciar --> inicie ':' bloco




bloco --> instrucao bloco | ε

instrucao --> declarar fim | atribuir fim | crementar fim | estruturaIf | estruturaWhile | estruturaFor | quebre fim | continue fim | estruturaEscrever fim | comentar fim




expressao --> soma

soma --> mult somaResto

somaResto --> '+' mult somaResto | '-' mult somaResto | ε

mult --> valor multResto

multResto --> '*' valor multResto | '/' valor multResto | ε

valor --> inteiro | decimal | id | '(' expressao ')' | '-' valor | texto




tipos --> tipoInt | tipoFloat | tipoString

declarar --> tipos id inicializar

inicializar --> opAtrib atributo | ε

atributo --> expressao | leia '(' tipos ')'

atribuir --> id opAtrib atributo

comentar --> comente texto

crementar --> id opCremento



estruturaIf --> se '(' condicao ')' '{' bloco '}' estruturaElseif estruturaElse

estruturaElseif --> senaose '(' condicao ')' '{' bloco '}' estruturaElseif | ε

estruturaElse --> senao '{' bloco '}' | ε





condicao --> termoE condicaoResto

condicaoResto --> ou termoE condicaoResto | ε

termoE --> relacional termoEResto

termoEResto --> e relacional termoEResto | ε

relacional --> '(' condicao ')' | expressao opRelac expressao




estruturaWhile --> enquanto '(' condicao ')' '{' bloco '}'

estruturaFor --> para '(' comeco fim condicao fim finall ')' '{' bloco '}'

comeco = declarar | atribuir

finall = crementar | atribuir




estruturaEscrever --> escreva '('  expressao restoTexto ')'

restoTexto --> '+' expressao restoTexto | ε
